# data-mining-tubes

./: .gitignore  README.md
data-mining-final-project/: .gitignore  pyproject.toml  readme.md  requirements.txt
data-mining-final-project/another-feature-selection-comparison/: FINAL_REPORT.md  REPORT.md  dataset1_comparison.py  dataset2_comparison.py  run_all.py  test_excel.py
data-mining-final-project/dataset-type-1/: A2021.csv  A2023.csv
data-mining-final-project/dataset-type-2/: Gelombang (2).xlsx  Gelombang (4).xlsx  Gelombang (5).xlsx  Gelombang (6).xlsx
data-mining-final-project/docs/: DATASET-1-GUIDE.md  DATASET-2-GUIDE.md  EXECUTIVE-SUMMARY.md  HOW-TO-RUN.md  QUICK-REFERENCE.md  README-FEATURE-SELECTION.md  VISUAL-WORKFLOW.md
data-mining-final-project/feature-selection-comparison/: HONEST-REPORT-COMPARISON.md  create_visualizations.py  dataset1_comparison_feature_selection.py  feature-scores-visual.py  feature-selection-visual-with-scores.py  feature-selection-visual.py  objective.md  requirements.txt  run_all.py
data-mining-final-project/notebooks/: dataset1-pharmacy-analysis.ipynb  dataset2-wave-analysis.ipynb  feature-selection-comparison.ipynb
data-mining-final-project/rfecv-only/: CHECKLIST.md  HONEST-REPORT-COMPARISON.md  LAPORAN.md  LAPORAN_OLD.md  README.md  create_before_after_comparison.py  dataset1_rfecv.py  dataset2_comparison_feature_selection.py  dataset2_rfecv.py  ketentuan.md
data-mining-final-project/scripts/: comparative_analysis.py  dataset1_analysis.py  dataset1_feature_selection.py  dataset2_analysis.py  main.py  run_all.py  (+1 more)
(+35 files in other folders)
